# ebpf-firewall

.github/workflows/: build.yml
ebpf/: Cargo.toml
ebpf/src/: limits.rs  main.rs
userspace/: Cargo.toml  run-mac.sh
userspace/firewall/: Cargo.toml  build.rs
userspace/firewall-common/: Cargo.toml
userspace/firewall-common/src/: lib.rs
userspace/firewall/src/: bpf_store.rs  config.rs  firewall.rs  lib.rs
userspace/xtask/: Cargo.toml
userspace/xtask/src/: codegen.rs
