[package]
name = "firewall-ebpf"
version = "0.1.0"
edition = "2024"

[dependencies]
aya-ebpf = "0.1"
firewall-common = { path = "../userspace/firewall-common" }
memoffset = "0.9"
strum = { version = "0.27", default-features = false }
network-types = { version = "0.0.8" }
aya-log-ebpf = "0.1.1"

[features]
wireguard = []
rules512 = []
rules256 = []
rules128 = []
rules64 = []
rules32 = []

[[bin]]
name = "firewall-ebpf"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
