[package]
name = "firewall-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["maxranges256"]
user = ["aya", "thiserror", "num-derive", "num-traits", "serde"]
maxranges1024 = []
maxranges512 = []
maxranges256 = []
maxranges128 = []
maxranges64 = []
maxranges32 = []
maxranges16 = []

[dependencies]
strum = { version = "0.27", default-features = false }
strum_macros = { version = "0.27", default-features = false }
aya = { version = "0.13", optional = true }
thiserror = { version = "2", optional = true }
num-derive = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
test-case = "3.3"

[lib]
path = "src/lib.rs"
