[package]
name = "firewall"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["tokio"]
tokio = ["dep:tokio", "aya/async_tokio"]
async-std = ["dep:async-std", "aya/async_std"]
wireguard = []
maxranges1024 = ["firewall-common/maxranges1024"]
maxranges512 = ["firewall-common/maxranges512"]
maxranges256 = ["firewall-common/maxranges256"]
maxranges128 = ["firewall-common/maxranges128"]
maxranges64 = ["firewall-common/maxranges64"]
maxranges32 = ["firewall-common/maxranges32"]
maxranges16 = ["firewall-common/maxranges16"]
rules1024 = []
rules512 = []
rules256 = []
rules128 = []
rules64 = []
rules32 = []

[dependencies]
aya = { version = "0.13" }
firewall-common = { path = "../firewall-common", features = ["user"] }
tracing = "0.1"
bytes = "1.10.1"
tokio = { version = "1", optional = true, default-features = false }
async-std = { version = "1", optional = true, default-features = false }
thiserror = "2"
ipnet = "2.11"
# used for logging
uuid = { version = "1.17", features = ["serde"] }
num-traits = "0.2"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.45", default-features = false, features = [
    "signal",
    "rt",
    "macros",
    "rt-multi-thread",
] }
anyhow = "1"
libc = "0.2"
test-case = "3.3"
